src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/NVVertexArrayRange_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVVertexArrayRange_StringErrorContext.class */
public final class NVVertexArrayRange_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglVertexArrayRangeNV(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVVertexArrayRangeErrorContext");
        methods.put("glVertexArrayRangeNV(Ljava/nio/ByteBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVVertexArrayRangeErrorContext");
        methods.put("glFlushVertexArrayRangeNV()V", "net/labymod/core/laby3d/opengl/error/generated/NVVertexArrayRangeErrorContext");
        return methods;
    }
}
